ws and new offer funcs added to listen new offers
