# controllers/docs/swagger.json
@@ -252,6 +252,86 @@
                 }
             }
         },
+        "/offers/new": {
+            "post": {
+                "description": "Post new bid for auction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auction"
+                ],
+                "summary": "New Offer For Auction",
+                "operationId": "new-offer-auction",
+                "parameters": [
+                    {
+                        "description": "New Offer Info",
+                        "name": "newOfferInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.OfferInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Offer sent",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/offers/{id}": {
+            "get": {
+                "description": "Get Real-Time Bids for auction",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auction"
+                ],
+                "summary": "Get Auction",
+                "operationId": "get-ws-auction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Get Auction",
+                        "name": "auctionId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Offer got",
+                        "schema": {
+                            "$ref": "#/definitions/models.OfferInfo"
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/product/delete": {
             "delete": {
                 "description": "Delete a product",
@@ -355,7 +435,7 @@
                 "parameters": [
                     {
                         "description": "Update product data",
-                        "name": "getProductiNFO",
+                        "name": "getProductInfo",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -529,6 +609,23 @@
                     "type": "string"
                 },
                 "slug": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.OfferInfo": {
+            "type": "object",
+            "properties": {
+                "auction_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "offer": {
+                    "type": "number"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
